--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
 		<div class="container">
 			<h1 class="pa-h1-v1 pa-bright fadeInLeftDelay03Duration10"><strong>Founder:<br>Zeeshawn Marshall</strong></h1>
-			<h4 class="pa-h4-v1 pa-bright fadeInLeftDelay03Duration10">Portfolio Website</h4>
+			<h4 class="pa-h4-v1 pa-bright fadeInLeftDelay03Duration10">Personal Website</h4>
 			<div class="mt-4"></div>
 			<a class="pa-button-primary pa-hvr-sweep-to-right fadeInRightDelay11Duration10 text-center" href="http://zeeshawn.com" target="_blank">Check it Out</a>
 		</div>
