Took skills section out

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 					<li class="nav-item"><a class="nav-link" href="service-item.html">Other Electronic Repairs</a></li>
 				</ul> -->
 			</li>
-
+<!--
 			<li class="nav-item">
 				<a class="nav-link hvr-underline-from-center" href="#skills">Our Skills</a>
 			</li>
-
+-->
 			
 
 			<li class="nav-item">
@@ -436,18 +436,19 @@
 	<!-- /.pa-what-we-do -->
 
 	<!-- Skills Section
-	================================================== -->
 	<section id="skills" class="pa-skills">
-
+	
 		<div class="container">
-			<!-- Section Header -->
+			
 			<div class="row">
 				<div class="col-12 col-xl-10 offset-xl-1 text-center">
-					<h5 class="pa-h1-v3 pa-bright pt-4 pb-1 mb-4 fadeInDelay03Duration10">Let <strong>Our Skills</strong> speak for Us</h5>
-					<p class="pa-p-v1 pa-bright fadeInDelay03Duration10">Experts in our skills, 100% satisfaction from our clients.</p>
+					<h5 class="pa-h1-v3 pa-bright pt-4 pb-1 mb-4 fadeInDelay03Duration10">Let <strong>Our Skills</strong>
+						speak for Us</h5>
+					<p class="pa-p-v1 pa-bright fadeInDelay03Duration10">Experts in our skills, 100% satisfaction from our
+						clients.</p>
 				</div>
 			</div>
-
+	
 			<div class="row pa-skills-row">
 				<div class="col-12">
 					<div class="pa-skill-warp">
@@ -455,51 +456,56 @@
 						<div class="pa-skill-area pa-skill-el">
 							<div class="pa-skill-bar progressBar" style="width: 100%;"></div>
 						</div>
-						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span class="fadeInDelay10Duration10">%</span></p>
+						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span
+								class="fadeInDelay10Duration10">%</span></p>
 					</div>
 					<div class="pa-skill-warp">
 						<p class="pa-skill-name pa-skill-el">Website Development</p>
 						<div class="pa-skill-area pa-skill-el">
 							<div class="pa-skill-bar progressBar" style="width: 100%;"></div>
 						</div>
-						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span class="fadeInDelay10Duration10">%</span></p>
+						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span
+								class="fadeInDelay10Duration10">%</span></p>
 					</div>
 					<div class="pa-skill-warp">
 						<p class="pa-skill-name pa-skill-el">Bespoke Software</p>
 						<div class="pa-skill-area pa-skill-el">
 							<div class="pa-skill-bar progressBar" style="width: 100%;"></div>
 						</div>
-						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span class="fadeInDelay10Duration10">%</span></p>
+						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span
+								class="fadeInDelay10Duration10">%</span></p>
 					</div>
 					<div class="pa-skill-warp">
 						<p class="pa-skill-name pa-skill-el">Drone Engineering</p>
 						<div class="pa-skill-area pa-skill-el">
 							<div class="pa-skill-bar progressBar" style="width: 100%;"></div>
 						</div>
-						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span class="fadeInDelay10Duration10">%</span></p>
+						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span
+								class="fadeInDelay10Duration10">%</span></p>
 					</div>
 					<div class="pa-skill-warp">
 						<p class="pa-skill-name pa-skill-el">Electronic Repairs</p>
 						<div class="pa-skill-area pa-skill-el">
 							<div class="pa-skill-bar progressBar" style="width: 100%;"></div>
 						</div>
-						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span class="fadeInDelay10Duration10">%</span></p>
+						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span
+								class="fadeInDelay10Duration10">%</span></p>
 					</div>
 					<div class="pa-skill-warp">
 						<p class="pa-skill-name pa-skill-el">Home Automation</p>
 						<div class="pa-skill-area pa-skill-el">
 							<div class="pa-skill-bar progressBar" style="width: 100%;"></div>
 						</div>
-						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span class="fadeInDelay10Duration10">%</span></p>
+						<p class="pa-skill-number pa-skill-el"><span class="pa-counterskills">100</span><span
+								class="fadeInDelay10Duration10">%</span></p>
 					</div>
 				</div>
 			</div>
-			
+	
 		</div>
-
+	
 	</section>
-	<!-- /.pa-skills -->
-
+	/.pa-skills -->
 
 	<!-- Contact Us Section
 	================================================== -->
